--- a/CCHMapClusterController Example iOS/CCHMapClusterController Example iOS.xcodeproj/xcshareddata/xcschemes/CCHMapClusterController.xcscheme
+++ b/CCHMapClusterController Example iOS/CCHMapClusterController Example iOS.xcodeproj/xcshareddata/xcschemes/CCHMapClusterController.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0720"
+   LastUpgradeVersion = "0730"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "62D6677E1845E0F20046D5D5"
-               BuildableName = "CCHMapClusterController Example iOS.app"
-               BlueprintName = "CCHMapClusterController Example iOS"
+               BlueprintIdentifier = "EF994A8A1D4793FD00619DFF"
+               BuildableName = "CCHMapClusterController.framework"
+               BlueprintName = "CCHMapClusterController"
                ReferencedContainer = "container:CCHMapClusterController Example iOS.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -26,29 +26,9 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      codeCoverageEnabled = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
-         <TestableReference
-            skipped = "NO">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "62D6679F1845E0F20046D5D5"
-               BuildableName = "CCHMapClusterController Example iOSTests.xctest"
-               BlueprintName = "CCHMapClusterController Example iOSTests"
-               ReferencedContainer = "container:CCHMapClusterController Example iOS.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "62D6677E1845E0F20046D5D5"
-            BuildableName = "CCHMapClusterController Example iOS.app"
-            BlueprintName = "CCHMapClusterController Example iOS"
-            ReferencedContainer = "container:CCHMapClusterController Example iOS.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -62,16 +42,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "62D6677E1845E0F20046D5D5"
-            BuildableName = "CCHMapClusterController Example iOS.app"
-            BlueprintName = "CCHMapClusterController Example iOS"
+            BlueprintIdentifier = "EF994A8A1D4793FD00619DFF"
+            BuildableName = "CCHMapClusterController.framework"
+            BlueprintName = "CCHMapClusterController"
             ReferencedContainer = "container:CCHMapClusterController Example iOS.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -81,16 +60,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "62D6677E1845E0F20046D5D5"
-            BuildableName = "CCHMapClusterController Example iOS.app"
-            BlueprintName = "CCHMapClusterController Example iOS"
+            BlueprintIdentifier = "EF994A8A1D4793FD00619DFF"
+            BuildableName = "CCHMapClusterController.framework"
+            BlueprintName = "CCHMapClusterController"
             ReferencedContainer = "container:CCHMapClusterController Example iOS.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
